Main Form Created And Some Clases in BLL

--- a/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
+++ b/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ClientsRepository.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="DataConnection.cs" />
+    <Compile Include="Interface\IGetObject.cs" />
     <Compile Include="ItemCategoryRepository.cs" />
     <Compile Include="ItemRepository.cs" />
     <Compile Include="ItemTypeRepository.cs" />
