--- a/PTi1MenaxhimiDepos/App.config
+++ b/PTi1MenaxhimiDepos/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="MenaxhimiDepos" connectionString="Data Source=BesarKutleshi;Database=ProjektiT1;UserId=sa;Password=kutleshi1404.;"/>
+    <add name="MenaxhimiDepos" connectionString="Data Source=BesarKutleshi;Initial Catalog=ProjektiT1;Integrated Security=True"/>
   </connectionStrings>
 </configuration>
