--- a/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
+++ b/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountBLL.cs" />
     <Compile Include="Convert.cs" />
     <Compile Include="ItemBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
