--- a/PTi1MenaxhimiDepos.BO/PTi1MenaxhimiDepos.BO.csproj
+++ b/PTi1MenaxhimiDepos.BO/PTi1MenaxhimiDepos.BO.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account\User.cs" />
     <Compile Include="Address.cs" />
     <Compile Include="AuditionAtributtes.cs" />
     <Compile Include="Clients\Client.cs" />
@@ -57,6 +58,8 @@
     <Compile Include="POS\PointofSale.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Administration\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
