--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -53,6 +53,24 @@
   <ItemGroup>
     <Compile Include="Controls\ControlShow.cs" />
     <Compile Include="Controls\CreateControl.cs" />
+    <Compile Include="Items\ItemCategory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Items\ItemCategory.Designer.cs">
+      <DependentUpon>ItemCategory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Items\ItemType.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Items\ItemType.Designer.cs">
+      <DependentUpon>ItemType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Items\ItemUnit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Items\ItemUnit.Designer.cs">
+      <DependentUpon>ItemUnit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,10 +85,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterItem.cs">
+    <Compile Include="Items\RegisterItem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RegisterItem.Designer.cs">
+    <Compile Include="Items\RegisterItem.Designer.cs">
       <DependentUpon>RegisterItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Sale\Sale.cs">
@@ -79,6 +97,15 @@
     <Compile Include="Sale\Sale.Designer.cs">
       <DependentUpon>Sale.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Items\ItemCategory.resx">
+      <DependentUpon>ItemCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Items\ItemType.resx">
+      <DependentUpon>ItemType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Items\ItemUnit.resx">
+      <DependentUpon>ItemUnit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,10 +123,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RegisterItem.aa-DJ.resx">
+    <EmbeddedResource Include="Items\RegisterItem.aa-DJ.resx">
       <DependentUpon>RegisterItem.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RegisterItem.resx">
+    <EmbeddedResource Include="Items\RegisterItem.resx">
       <DependentUpon>RegisterItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sale\Sale.resx">
