--- a/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
+++ b/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Telerik.WinControls.GridView, Version=2020.1.218.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBLL.cs" />
     <Compile Include="Convert.cs" />
+    <Compile Include="HelperClass.cs" />
     <Compile Include="ItemBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaleBLL.cs" />
