Delete functionality for category complete

--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -221,5 +221,11 @@
   <ItemGroup>
     <None Include="Resources\invoice.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actions-edit-clear-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
