Category Crud , Unit Crud , Type Crud complete

--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Controls\ControlShow.cs" />
     <Compile Include="Controls\CreateControl.cs" />
+    <Compile Include="HelpClass.cs" />
     <Compile Include="Items\ItemCategory.cs">
       <SubType>Form</SubType>
     </Compile>
