Clear button functionality complete in every form

--- a/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
+++ b/PTi1MenaxhimiDepos.BL/PTi1MenaxhimiDepos.BL.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountBLL.cs" />
+    <Compile Include="Collaboration.cs" />
     <Compile Include="Convert.cs" />
     <Compile Include="HelperClass.cs" />
     <Compile Include="ItemBLL.cs" />
