--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -228,5 +228,8 @@
   <ItemGroup>
     <None Include="Resources\cancel-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actions-edit-clear-icon1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
