--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -51,6 +51,13 @@
     <Reference Include="TelerikCommon, Version=2020.1.218.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administration\Security.cs" />
+    <Compile Include="Administration\User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Administration\User.Designer.cs">
+      <DependentUpon>User.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ControlShow.cs" />
     <Compile Include="Controls\CreateControl.cs" />
     <Compile Include="HelpClass.cs" />
@@ -104,6 +111,9 @@
     <Compile Include="Sale\Sale.Designer.cs">
       <DependentUpon>Sale.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Administration\User.resx">
+      <DependentUpon>User.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Items\ItemCategory.resx">
       <DependentUpon>ItemCategory.cs</DependentUpon>
     </EmbeddedResource>
@@ -242,6 +252,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\User-Files-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Admin-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TinkerTool-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
