--- a/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
+++ b/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleRepository.cs" />
     <Compile Include="SaleRepository.cs" />
+    <Compile Include="Security\3DES.cs" />
     <Compile Include="SupplierRepostiory.cs" />
   </ItemGroup>
   <ItemGroup>
