--- a/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
+++ b/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
@@ -59,6 +59,8 @@
     <Compile Include="DataConnection.cs" />
     <Compile Include="HelperClass.cs" />
     <Compile Include="Interface\IGetObject.cs" />
+    <Compile Include="InvertoryBodyRepository.cs" />
+    <Compile Include="InvertoryHeaderRepository.cs" />
     <Compile Include="ItemCategoryRepository.cs" />
     <Compile Include="ItemRepository.cs" />
     <Compile Include="ItemTypeRepository.cs" />
