Purchase invoice form and functionality completed

--- a/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
+++ b/PTi1MenaxhimiDepos.DAL/PTi1MenaxhimiDepos.DAL.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AccountRepository.cs" />
     <Compile Include="ClientsRepository.cs" />
+    <Compile Include="DocTypeRepository.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="DataConnection.cs" />
     <Compile Include="HelperClass.cs" />
