--- a/PTi1MenaxhimiDepos/App.config
+++ b/PTi1MenaxhimiDepos/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="MenaxhimiDepos" connectionString="Data Source=BesarKutleshi;Initial Catalog=ProjektiT1;Integrated Security=True"/>
+    <!--<add name="MenaxhimiDepos" connectionString="Data Source=BesarKutleshi;Initial Catalog=ProjektiT1;Integrated Security=True"/>-->
+    <add name="MenaxhimiDepos" connectionString="Server=BesarKutleshi;Database=ProjektiT1; User ID=sa;Password=kutleshi1404."/>
   </connectionStrings>
 </configuration>
