--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Administration\User.Designer.cs">
       <DependentUpon>User.cs</DependentUpon>
     </Compile>
+    <Compile Include="Collab\Client.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Collab\Client.Designer.cs">
+      <DependentUpon>Client.cs</DependentUpon>
+    </Compile>
     <Compile Include="Collab\Supplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     </Compile>
     <EmbeddedResource Include="Administration\User.resx">
       <DependentUpon>User.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Collab\Client.resx">
+      <DependentUpon>Client.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Collab\Supplier.resx">
       <DependentUpon>Supplier.cs</DependentUpon>
@@ -294,6 +303,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\TinkerTool-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Company-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Clients-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
