Employee form completed

--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Collab\Client.Designer.cs">
       <DependentUpon>Client.cs</DependentUpon>
     </Compile>
+    <Compile Include="Collab\Employee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Collab\Employee.Designer.cs">
+      <DependentUpon>Employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Collab\Supplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Collab\Client.resx">
       <DependentUpon>Client.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Collab\Employee.resx">
+      <DependentUpon>Employee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Collab\Supplier.resx">
       <DependentUpon>Supplier.cs</DependentUpon>
