Sale form completed

--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -135,6 +135,12 @@
     <Compile Include="Items\RegisterItem.Designer.cs">
       <DependentUpon>RegisterItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sale\Payment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sale\Payment.Designer.cs">
+      <DependentUpon>Payment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sale\Sale.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Items\RegisterItem.resx">
       <DependentUpon>RegisterItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sale\Payment.resx">
+      <DependentUpon>Payment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sale\Sale.resx">
       <DependentUpon>Sale.cs</DependentUpon>
@@ -309,6 +318,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Clients-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\payment.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\insert.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\update1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
