--- a/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
+++ b/PTi1MenaxhimiDepos/PTi1MenaxhimiDepos.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Collab\Employee.Designer.cs">
       <DependentUpon>Employee.cs</DependentUpon>
     </Compile>
+    <Compile Include="Collab\EmployeePOS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Collab\EmployeePOS.Designer.cs">
+      <DependentUpon>EmployeePOS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Collab\Supplier.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Collab\Employee.resx">
       <DependentUpon>Employee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Collab\EmployeePOS.resx">
+      <DependentUpon>EmployeePOS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Collab\Supplier.resx">
       <DependentUpon>Supplier.cs</DependentUpon>
