Multi language completed

--- a/PTi1MenaxhimiDepos.DAL/App.config
+++ b/PTi1MenaxhimiDepos.DAL/App.config
@@ -11,4 +11,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <!--<connectionStrings>
+    --><!--<add name="MenaxhimiDepos" connectionString="Data Source=BesarKutleshi;Initial Catalog=ProjektiT1;Integrated Security=True"/>--><!--
+    <add name="MenaxhimiDepos" connectionString="Server=BesarKutleshi;Database=ProjektiT1; User ID=sa;Password=kutleshi1404."/>
+  </connectionStrings>-->
 </configuration>
